--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "autobind-decorator": "^1.3.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -18,6 +17,7 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.0",
     "browserify": "^12.0.1",
+    "classnames": "^2.2.3",
     "connect-history-api-fallback": "^1.1.0",
     "firebase": "^2.3.2",
     "font-awesome": "^4.5.0",
