--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "history": "^1.17.0",
+    "re-base": "^1.5.1",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-fontawesome": "^0.3.3",
