--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "gulp-util": "^3.0.7",
     "history": "^1.17.0",
     "re-base": "^1.5.1",
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5",
+    "react": "^0.14.7",
+    "react-catalyst": "^0.3.0",
+    "react-dom": "^0.14.7",
     "react-fontawesome": "^0.3.3",
     "react-router": "2.0.0-rc4",
     "vinyl-buffer": "^1.0.0",
