--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
     "browserify": "^12.0.1",
+    "bulma": "0.0.10",
     "classnames": "^2.2.3",
     "connect-history-api-fallback": "^1.1.0",
     "firebase": "^2.3.2",
@@ -25,7 +26,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "history": "^1.17.0",
@@ -36,6 +37,7 @@
     "react-dom": "^0.14.7",
     "react-fontawesome": "^0.3.3",
     "react-router": "2.0.0-rc4",
+    "sass-module-importer": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
