--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "babel-preset-stage-0": "^6.3.13",
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
-    "browserify": "^12.0.1",
-    "bulma": "0.0.10",
+    "browserify": "^13.0.0",
+    "bulma": "0.0.13",
     "classnames": "^2.2.3",
     "connect-history-api-fallback": "^1.1.0",
     "firebase": "^2.3.2",
@@ -29,14 +29,14 @@
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
-    "history": "^1.17.0",
+    "history": "^2.0.0",
     "md5": "^2.0.0",
     "re-base": "^1.5.1",
     "react": "^0.14.7",
     "react-catalyst": "^0.3.0",
     "react-dom": "^0.14.7",
     "react-fontawesome": "^0.3.3",
-    "react-router": "2.0.0-rc4",
+    "react-router": "2.0.0",
     "sass-module-importer": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
